@@ -2,6 +2,7 @@
 	- Added category field to tags (content/ero/technical)
 	- Group tags on /v+/tagmod by their category
 	- Added tag visibility options by category on /v+
+	- Added filter selector to tag pages (excl. tags tab)
 
 2.17 - 2011-02-04
 	- Allow moderators to overrule VN tag votes
